# nightfall-photo-ingress

./: .gitignore  .workspace-policy.md  AGENTS.md  ARCHITECTURE.md  CLAUDE DEV MCP README.md  COPILOT  DEV MCP README.md  README.md  mcp_server.py  metricsctl  pyproject.toml
.claude/: policy-language.md
.mcp/: model.json
api/: __init__.py  app.py  audit_hook.py  auth.py  dependencies.py  rapiddoc.py
audit/: documentation-structure-mapping.md  documentation-sufficiency-report.md  drift-analysis.md  phase-1.5-architectural-review.md  phase15-forensic-report-2026-04-10.md  photowheel-post-triage-gray-state-rca-2026-04-10.md  review-history.md  security-audit-2026-04-04.md  staging-token-mismatch-root-cause.md
conf/: photo-ingress.conf.example
dashboard/: .build-stamp  __data.json  index.html
design/: README.md  architecture-decision-log.md  architecture.md  auth-design.md  cli-config-specification.md  configspec.md  decisions.md  design-tokens.md  devctl-update-architecture.md  domain-architecture-overview.md  ingest-lifecycle-and-crash-recovery.md  phase2-architecture.md  refinements.md  ui-mapping.md  v1-baseline-spec.md  v2-deferred-items.md  web-control-plane-architecture-extension.md  web-control-plane-architecture-phase2.md  web-control-plane-architecture-phase3.md  web-control-plane-phase3-proposals.md  webui-architecture-phase1.md  webui-architecture.md  webui-component-mapping-phase1.md
dev/: devctl  devctl_helpers.sh  govctl-targets.yaml  metrics-runner
docs/: app-registration-design.md  development-handbook.md  multi-agent-framework.md  operations-runbook.md
install/: install.sh  uninstall.sh
lib/: container-common.sh
metrics/: README.md  __init__.py
nightfall_photo_ingress/: cli.py  config.py  logging_bootstrap.py  registry.py  storage.py
planning/: iterative-implementation-roadmap.md  migration-roadmap.md  phase1-re-evaluation.md  web-api-ui-integration-plan.md  web-control-plane-implementation-roadmap.md  (+3 more)
reports/: latest.md
(+923 files in other folders)
