[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nightfall-photo-ingress"
version = "2.0.0"
description = "Nightfall photo ingress service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "msal>=1.30.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.0",
  "pytest>=8.0.0",
  "pytest-cov>=6.0.0",
  "radon>=6.0.1",
]
web = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
]

[project.scripts]
nightfall-photo-ingress = "nightfall_photo_ingress.cli:main"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests/unit", "tests/integration"]
markers = [
  "robustness: end-to-end resilience regression scenarios for the OneDrive client",
  "staging: staging-environment tests; require a live LXC container (run with: pytest tests/staging)",
  "staging_flow: production flow test contracts (run with: pytest tests/staging-flow)",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["nightfall_photo_ingress*"]
